--- a/resume/index.html
+++ b/resume/index.html
@@ -29,19 +29,22 @@
         <section>
             <h3>Summary</h3>
             <li class="summary-item list-item">
-                Good knowledge of JavaScript, popular libraries and frameworks such as jQuery, Bootstrap, React.js
+                Knowledge of JavaScript, popular libraries and frameworks such as jQuery, Bootstrap, React.js
+            <li class="summary-item list-item">
+            Understanding the logic of the client-server architecture in the context of writing real apps. Knowledge Node.js, Express.js, SQL/NoSQL database
             </li>
             <li class="summary-item list-item">
                 Developed Web Interfaces and Web Apps
             </li>
-            <li class="summary-item list-item">
-                Understanding the logic of the client-server architecture in the context of writing real apps. Knowledge Node.js, Express.js, SQL/NoSQL database
             </li>
             <li class="summary-item list-item">
                 Tested and scaled web applications
             </li>
             <li class="summary-item list-item">
-                Worked with the GIT version control system and have experience working in a team
+                Worked with the GIT
+            </li>
+            <li class="summary-item list-item">
+                Have team work experience
             </li>
         </section>
         <section>
@@ -72,7 +75,7 @@
                     <span class="skills-item-title">Gulp/Webpack</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
                 </li>
                 <li class="skills-item">
-                    <span class="skills-item-title">React</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                    <span class="skills-item-title">React.js + Redux</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                 </li>
                 <li class="skills-item">
                     <span class="skills-item-title">Express.js</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
@@ -89,31 +92,31 @@
             <h3>Projects</h3>
             <li class="project-item list-item">
                 <a href="https://maksim-popov.github.io/tanks/" target="_blank">Tanks</a> - Web Game
-                <p class="project-item-desc">Developed the basis for the game "tanks" in accordance with ECMAScript 6. The OOP concept was used to build the application logic.</p>
+                <p class="project-item-desc">The game was developed in accordance with ECMAScript 6. The logic of application was build according to OOP concepts.</p>
             </li>
             <li class="project-item list-item">
                 <a href="https://maksim-popov.github.io/sapper/" target="_blank">Sapper</a> - Web Game
-                <p class="project-item-desc">This application is written in a functional style using recursive calls.</p>
+                <p class="project-item-desc">This application was written in functional style using recursive calls.</p>
             </li>
             <li class="project-item list-item">
                 <a href="http://free-parking.kiev.ua/" target="_blank">Free Parking</a> - Web App for social project
-                <p class="project-item-desc">Created a back-end in php and used a MySQL database to run the voting application</p>
+                <p class="project-item-desc">Created a back-end part in php environment and used MySQL database for run the voting application</p>
             </li>
             <li class="project-item list-item">
                 <a href="http://fem1-step-note.herokuapp.com" target="_blank">Notes</a> - Web App
-                <p class="project-item-desc">Team work experience. Developed an application on Node.js (Back-end + Front-end) using MongoDB and heroku server</p>
+                <p class="project-item-desc">Team work experience. Developed an application in Node.js (Back-end + Front-end) using MongoDB and heroku server</p>
             </li>
             <li class="project-item list-item">
                 <a href="https://maksim-popov.github.io/pizza/" target="_blank">Pizza</a> - Landing Page (adaptive)
-                <p class="project-item-desc">Experience with using psd-layouts and Pixel Perfect technique.</p>
+                <p class="project-item-desc">Experience with PSD layouts and Pixel Perfect technique.</p>
             </li>
             <li class="project-item list-item">
                 <a href="https://maksim-popov.github.io/parallax/" target="_blank">Parallax</a> - Landing Page template (desktop)
-                <p class="project-item-desc">Mastered the parallax effect in CSS</p>
+                <p class="project-item-desc">Created parallax effect in CSS</p>
             </li>
             <li class="project-item list-item">
                 <a href="https://maksim-popov.github.io/fem1-popov-step-ham/" target="_blank">The Ham</a> - Landing Page (desktop)
-                <p class="project-item-desc">Developed frequently used functions in landing pages such as slider, tabs and filters. Practiced jQuery.</p>
+                <p class="project-item-desc">Developed often used features in landing pages like slider, tabs and filters. Experience with jQuery.</p>
             </li>
         </section>
         <section>
