--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
         <div class="aside-wrapper">
             <img class="aside-photo" src="img/photo-card3.jpg" alt="photo"/>
             <h1 class="aside-name">Maksim Popov</h1>
-            <h2 class="aside-profession">Front-end Developer</h2>
+            <h2 class="aside-profession">JavaScript Software Engineer</h2>
             <div class="aside-info">
                 <li class="aside-info-item"><i class="fas fa-phone"></i>  <a class="aside-info-tel" href="tel:+380676304582">38 (067) 630 45 82</a></li>
                 <li class="aside-info-item"><i class="fas fa-envelope"></i>  <a href="mailto:max.popov.mail@gmail.com">max.popov.mail@gmail.com</a></li>
@@ -30,15 +30,15 @@
             <h3>Summary</h3>
             <li class="summary-item list-item">
                 Knowledge of JavaScript, popular libraries and frameworks such as jQuery, Bootstrap, React.js
-            <li class="summary-item list-item">
-            Understanding the logic of the client-server architecture in the context of writing real apps. Knowledge Node.js, Express.js, SQL/NoSQL database
             </li>
             <li class="summary-item list-item">
-                Developed Web Interfaces and Web Apps
-            </li>
+                Understanding the logic of the client-server architecture in the context of writing real apps.
             </li>
             <li class="summary-item list-item">
-                Tested and scaled web applications
+                Developed back-end using Node.js, Express.js, SQL/NoSQL database
+            </li>
+            <li class="summary-item list-item">
+                Developed Web Interfaces and Web Apps (from landing pages to BPM systems)
             </li>
             <li class="summary-item list-item">
                 Worked with the GIT
@@ -57,10 +57,10 @@
                     <span class="skills-item-title">JavaScript</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
                 </li>
                 <li class="skills-item">
-                    <span class="skills-item-title">jQuery</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                    <span class="skills-item-title">jQuery</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
                 </li>
                 <li class="skills-item">
-                    <span class="skills-item-title">Bootstrap</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                    <span class="skills-item-title">Bootstrap/AntD</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
                 </li>
                 <li class="skills-item">
                     <span class="skills-item-title">Git</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
@@ -75,21 +75,29 @@
                     <span class="skills-item-title">Gulp/Webpack</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
                 </li>
                 <li class="skills-item">
-                    <span class="skills-item-title">React.js + Redux</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                    <span class="skills-item-title">React.js + Redux</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
                 </li>
                 <li class="skills-item">
-                    <span class="skills-item-title">Express.js</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                    <span class="skills-item-title">Express.js</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                 </li>
                 <li class="skills-item">
                     <span class="skills-item-title">EJS/JSX</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                 </li>
                 <li class="skills-item">
-                    <span class="skills-item-title">SQL/NoSQL</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                    <span class="skills-item-title">SQL/NoSQL</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                 </li>
             </div>
         </section>
         <section>
             <h3>Projects</h3>
+            <li class="project-item list-item">
+                <a href="https://cleaningbpm.herokuapp.com/" target="_blank">CleaningBPM</a> - Cloud BPM system
+                <p class="project-item-desc">Full stack software development with complex multi-level business logic. Created for a cleaning company.</p>
+            </li>
+            <li class="project-item list-item">
+                <a href="https://report-consolidation-app.herokuapp.com/" target="_blank">Report Consolidation App</a> - Cloud Web App
+                <p class="project-item-desc">Full stack software development for a holding company. The application retrieves data from excel files and generates a consolidated report.</p>
+            </li>
             <li class="project-item list-item">
                 <a href="https://maksim-popov.github.io/tanks/" target="_blank">Tanks</a> - Web Game
                 <p class="project-item-desc">The game was developed in accordance with ECMAScript 6. The logic of application was build according to OOP concepts.</p>
@@ -97,6 +105,10 @@
             <li class="project-item list-item">
                 <a href="https://maksim-popov.github.io/sapper/" target="_blank">Sapper</a> - Web Game
                 <p class="project-item-desc">This application was written in functional style using recursive calls.</p>
+            </li>
+            <li class="project-item list-item">
+                <a href="https://fem1-final-project.herokuapp.com/" target="_blank">Muz-Shop</a> - E-commerce project
+                <p class="project-item-desc">Team work experience. Created a back-end side using Node.js, Express and MongoDB </p>
             </li>
             <li class="project-item list-item">
                 <a href="http://free-parking.kiev.ua/" target="_blank">Free Parking</a> - Web App for social project
