--- a/resume/index.html
+++ b/resume/index.html
@@ -32,7 +32,7 @@
                 Knowledge of JavaScript, popular libraries and frameworks such as jQuery, Bootstrap, React.js
             </li>
             <li class="summary-item list-item">
-                Understanding the logic of the client-server architecture in the context of writing real apps.
+                Understanding the logic of the client-server architecture in the context of writing real apps
             </li>
             <li class="summary-item list-item">
                 Developed back-end using Node.js, Express.js, SQL/NoSQL database
