--- a/resume/index.html
+++ b/resume/index.html
@@ -135,7 +135,7 @@
             <h3>Experience</h3>
             <div class="timelist">
                 <span class="timelist-year">2018-today</span>
-                <span class="timelist-text">Front-End Developer (Freelance)</span>
+                <span class="timelist-text">JavaScript Software Engineer (Freelance)</span>
                 <span class="timelist-year">2017-2018</span>
                 <span class="timelist-text">Embedded Software Engineer (Freelance)</span>
                 <span class="timelist-year">2015-2017</span>
